# whip4brats

./: .gitignore  LICENSE_MIT  README.md
BratLocker/: BratLocker.sln
BratLocker/BratLocker/: BratLocker.cpp  BratLocker.rc  BratLocker.vcxproj  BratLocker.vcxproj.filters  ExtendTimeDialog.ixx  SharedMemoryManager.ixx  resource.h
Whip4BratsGUI/: Whip4BratsGUI.sln
Whip4BratsGUI/Whip4BratsGUI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Whip4BratsGUI.csproj  app.manifest  appsettings.json
Whip4BratsGUI/Whip4BratsGUI.Core/: Whip4BratsGUI.Core.csproj
Whip4BratsGUI/Whip4BratsGUI.Core/Helpers/: Json.cs
Whip4BratsGUI/Whip4BratsGUI.Core/Localization/: Strings.Designer.cs  Strings.pl.resx  Strings.resx
Whip4BratsGUI/Whip4BratsGUI.Core/Models/: Feature.cs  PlayCalendar.cs  PlayTime.cs
Whip4BratsGUI/Whip4BratsGUI.Core/Services/: AuxiliaryService.cs  FeatureListService.cs  FileService.cs  WindowsRegistryService.cs
Whip4BratsGUI/Whip4BratsGUI/Activation/: ActivationHandler.cs  DefaultActivationHandler.cs  IActivationHandler.cs
Whip4BratsGUI/Whip4BratsGUI/Behaviors/: NavigationViewHeaderBehavior.cs  NavigationViewHeaderMode.cs
Whip4BratsGUI/Whip4BratsGUI/Helpers/: EnumToBooleanConverter.cs  FrameExtensions.cs  MessageBoxHelper.cs  NavigationHelper.cs  ResourceExtensions.cs  RuntimeHelper.cs  SettingsStorageExtensions.cs  TitleBarHelper.cs
Whip4BratsGUI/Whip4BratsGUI/Models/: LocalSettingsOptions.cs
Whip4BratsGUI/Whip4BratsGUI/Properties/: launchsettings.json
Whip4BratsGUI/Whip4BratsGUI/Services/: ActivationService.cs  LocalSettingsService.cs  NavigationService.cs  NavigationViewService.cs  PageService.cs  ThemeSelectorService.cs
Whip4BratsGUI/Whip4BratsGUI/ViewModels/: AdvancedSettingsViewModel.cs  ContentGridDetailViewModel.cs  ContentGridViewModel.cs  MainViewModel.cs  PasswordDialogViewModel.cs  SettingsViewModel.cs  ShellViewModel.cs
Whip4BratsGUI/Whip4BratsSetup/: Whip4BratsSetup.vdproj
brat-server/: Cargo.toml  build.rs
brat-server/src/: action.rs  auxiliary.rs  client.rs  engine.rs  eventlogger.rs  func.c  main.rs  playtime.rs  service.rs  settings.rs  sharedmemorymanager.rs
executor/: Cargo.toml
executor/src/: actionprocessor.rs  actions.rs  extensions.rs  main.rs  server.rs  sharedmemorymanager.rs  wreg.rs
(+27 files in other folders)
